kubernetes/backend-api-1.deploy.yaml
#
# Backend api 1 deployment.
#

kind: Deployment
apiVersion: apps/v1
metadata:
  name: service-1-deployment
  labels:
    app: service-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-1
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
      - name: service-1-pods

        image: localhost:5000/microservices/service-1:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 9010

        livenessProbe:
          httpGet:
            path: /health
            port: 9010
          initialDelaySeconds: 3
          periodSeconds: 20

        resources:
          requests:
            memory: "256M"
            cpu: 0.25
