kubernetes/backend-api-2.deploy.yaml
#
# Backend api 2 deployment.
#

kind: Deployment
apiVersion: apps/v1
metadata:
  name: service-2-deployment
  labels:
    app: service-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-2
  template:
    metadata:
      labels:
        app: service-2
    spec:
      containers:
      - name: service-2-pods

        image: localhost:5000/microservices/service-2:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 3020

        livenessProbe:
          httpGet:
            path: /health
            port: 3020
          initialDelaySeconds: 3
          periodSeconds: 20

        resources:
          requests:
            memory: "256M"
            cpu: 0.25
